samples/_failures_safe/1761288474_56971a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c45c4e49.c: In function ‘main’:
./samples/SAFE/__tmp_c45c4e49.c:202:9: error: expected expression at end of input
  202 |         printf("Token %d: Type=%s, Value='%s'\n",
      |         ^~~~~~
./samples/SAFE/__tmp_c45c4e49.c:202:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c45c4e49.c:202:9: error: expected declaration or statement at end of input
